--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!--prueba-->
+<html>
+    <head></head>
+    <body>
+        <h2>Buscador de fotos de gatos</h2>
+        <span>Selecciona una categoria: </span>
+        <select></select>
+        <button id="enviar" name="enviar">Enviar</button>
+        <script src="./js/app.js"></script>
+    </body>
+</html>
