--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <select id="categorias"></select>
         <button id="enviar" name="enviar">Enviar</button>
         <br>
+        <ul>
+            <a  href="#"><li id="1">1</li></a>
+            <a  href="#"><li id="2">2</li></a>
+            <a  href="#"><li id="3">3</li></a>
+            <a  href="#"><li id="4">4</li></a>
+            <a  href="#"><li id="5">5</li></a>
+            <a  href="#"><li id="6">6</li></a>
+            <a  href="#"><li id="7">7</li></a>
+        </ul>
+
         <script src="./js/app.js"></script>
     </body>
 </html>
